account list spacing corrected

--- a/src/components/Wallet/AccountSelector/AccountItem/AccountItem.scss
+++ b/src/components/Wallet/AccountSelector/AccountItem/AccountItem.scss
@@ -3,8 +3,8 @@
 
 .account-item {
   cursor: pointer;
-  padding: 0.5em;
-  margin-bottom: 0.5rem;
+  padding: 0.5rem;
+  margin: 0 0.5rem 0.5rem 1rem;
   border: 3px solid transparent;
   border-radius: $border-radius;
 
