--- a/src/components/Wallet/AccountSelector/AccountSelector.scss
+++ b/src/components/Wallet/AccountSelector/AccountSelector.scss
@@ -19,13 +19,11 @@
     width: 360px;
     height: 50vh;
     background-color: $gray2;
-    padding: 0 1rem;
     border-radius: $border-radius;
   }
 
   &__heading {
     font-size: 1.5rem;
-    padding: 1rem 0;
   }
 
   &__close-modal-btn {
